--- a/skinStyles/mediawiki/mediawiki.rcfilters.filters.base.styles.less
+++ b/skinStyles/mediawiki/mediawiki.rcfilters.filters.base.styles.less
@@ -19,7 +19,7 @@
 		& .mw-rcfilters-spinner-bounce,
 		&:before,
 		&:after {
-			background-color: var( --color-primary );
+			background-color: var( --color-base--subtle );
 		}
 	}
 }
